CICD/shr-github/k8s/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-deployment
  labels:
    app: my-python-app
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      imagePullSecrets:
      - name: gcr-json-key
      containers:
      - name: python-container
        image: europe-central2-docker.pkg.dev/analog-pilot-422817-r3/sherpany-test/my-app:latest #should be all time new i'm using latest.
        ports:
        - containerPort: 8080
