CICD/shr-github/k8s/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-service
spec:
  selector:
    app: my-python-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
